--- a/app/public/style.css
+++ b/app/public/style.css
@@ -9,6 +9,11 @@ body  {
 
 p {
     letter-spacing: -0.5px;
+} 
+
+.form-control {
+    background-color: gray;
+    border-color: gray;
 }
 
 img {
@@ -16,7 +21,7 @@ img {
     height: auto;
 }
 
-#title {
+.title {
     font-family: 'Crimson Text', serif;
     text-shadow: 0px 0px 5px #800000;
     margin-top: 20px;
